# simple-logger

./: .gitignore  CMakeLists.txt  README.md
include/: simple-logger.hpp
src/: simple-logger.cpp
test/: CMakeLists.txt  main.cpp
